build/log/idf_py_stderr_output_40914
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:41:6: error: ambiguating new declaration of 'void esp_now_init()'
   41 | void esp_now_init(void) {
      |      ^~~~~~~~~~~~
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:12:
/home/vicenterey/esp/idf/esp-idf/components/esp_wifi/include/esp_now.h:127:11: note: old declaration 'esp_err_t esp_now_init()'
  127 | esp_err_t esp_now_init(void);
      |           ^~~~~~~~~~~~
In file included from /home/vicenterey/esp/idf/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/vicenterey/esp/idf/esp-idf/components/esp_hw_support/include/esp_cpu.h:20,
                 from /home/vicenterey/esp/idf/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/vicenterey/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/vicenterey/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/vicenterey/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:8:
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void esp_now_init()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:50:44: error: invalid conversion from 'void (*)(const uint8_t*, const uint8_t*, int)' {aka 'void (*)(const unsigned char*, const unsigned char*, int)'} to 'esp_now_recv_cb_t' {aka 'void (*)(const esp_now_recv_info*, const unsigned char*, int)'} [-fpermissive]
   50 |   ESP_ERROR_CHECK(esp_now_register_recv_cb(on_data_receive));
      |                                            ^~~~~~~~~~~~~~~
      |                                            |
      |                                            void (*)(const uint8_t*, const uint8_t*, int) {aka void (*)(const unsigned char*, const unsigned char*, int)}
/home/vicenterey/esp/idf/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/vicenterey/esp/idf/esp-idf/components/esp_wifi/include/esp_now.h:158:54: note:   initializing argument 1 of 'esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t)'
  158 | esp_err_t esp_now_register_recv_cb(esp_now_recv_cb_t cb);
      |                                    ~~~~~~~~~~~~~~~~~~^~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[3]: *** Waiting for unfinished jobs....
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/tflite_bridge/flatbuffer_conversions_bridge.h:19,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_allocator.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/micro/micro_interpreter.h:26,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:6:
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h: In member function 'T* tflite::BuiltinDataAllocator::AllocatePOD()':
/home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/api/flatbuffer_conversions.h:46:24: warning: 'template<class _Tp> struct std::is_pod' is deprecated: use 'is_standard_layout && is_trivial' instead [-Wdeprecated-declarations]
   46 |     static_assert(std::is_pod<T>::value, "Builtin data structure must be POD.");
      |                        ^~~~~~
In file included from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/bits/stl_pair.h:60,
                 from /home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/utility:69,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/core/c/common.h:1463,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/components/espressif__esp-tflite-micro/tensorflow/lite/c/common.h:31,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.h:4,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:2:
/home/vicenterey/esp/idf-tools/tools/xtensa-esp-elf/esp-13.2.0_20240305/xtensa-esp-elf/xtensa-esp-elf/include/c++/13.2.0/type_traits:819:5: note: declared here
  819 |     is_pod
      |     ^~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc: In function 'void setup()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:46:7: error: 'ret' was not declared in this scope
   46 |   if (ret == ESP_ERR_NVS_NO_FREE_PAGES || ret == ESP_ERR_NVS_NEW_VERSION_FOUND) {
      |       ^~~
In file included from /home/vicenterey/esp/idf/esp-idf/components/esp_hw_support/include/esp_intr_alloc.h:12,
                 from /home/vicenterey/esp/idf/esp-idf/components/esp_hw_support/include/esp_cpu.h:20,
                 from /home/vicenterey/esp/idf/esp-idf/components/esp_hw_support/include/spinlock.h:11,
                 from /home/vicenterey/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos/portmacro.h:49,
                 from /home/vicenterey/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/portable.h:57,
                 from /home/vicenterey/esp/idf/esp-idf/components/freertos/FreeRTOS-Kernel/include/freertos/FreeRTOS.h:69,
                 from /home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:10:
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:50:19: error: 'ret' was not declared in this scope
   50 |   ESP_ERROR_CHECK(ret);
      |                   ^~~
/home/vicenterey/esp/idf/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:59:44: error: 'on_data_receive' was not declared in this scope
   59 |   ESP_ERROR_CHECK(esp_now_register_recv_cb(on_data_receive));   // Registrar el callback
      |                                            ^~~~~~~~~~~~~~~
/home/vicenterey/esp/idf/esp-idf/components/esp_common/include/esp_err.h:116:30: note: in definition of macro 'ESP_ERROR_CHECK'
  116 |         esp_err_t err_rc_ = (x);                                        \
      |                              ^
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc: In function 'void loop()':
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:123:13: error: 'message_received' was not declared in this scope
  123 |     while (!message_received) {
      |             ^~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/main_functions.cc:126:5: error: 'message_received' was not declared in this scope
  126 |     message_received = false;  // Reiniciar la variable para la próxima espera
      |     ^~~~~~~~~~~~~~~~
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:118: esp-idf/main/CMakeFiles/__idf_main.dir/main_functions.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5751: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2473: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
